# python-template-for-ai-assistant

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/hooks/: main_sync_guard.json  notifications.json  protected_config.json  ruff_post_tool_use.json  ruff_quality_gate.json
.github/instructions/: general.instructions.md  test.instructions.md
.github/prompts/: pr.prompt.md  push.prompt.md  sync-from-main.prompt.md  sync-to-main.prompt.md
.github/workflows/: ci.yml  update-version-auto.yml  update-version-manual.yml
docker/: entrypoint.sh
docs/adr/: 00001-prioritize-executable-guardrails.md  00001-replace-pyright-with-ty.md  00002-do-not-adopt-copilot-post-tool-use-hook-for-ruff.md  00002-protect-pyproject-toml-from-casual-edits.md  00003-adopt-ruff-quality-gate-via-hooks.md  00004-protect-pyproject-toml-from-casual-edits.md  00005-switch-local-hooks-to-pre-commit.md  00006-add-main-sync-guard-hooks.md  00007-split-init-and-setup.md  00008-align-local-check-with-ci-pre-commit.md  00009-adopt-git-254-native-hooks.md  0001-copilot-cli-hooks-ty.md  0001-record-architecture-decisions.md  0001-use-pre-commit-hook.md  0002-use-pre-commit-hook.md  README.md
scripts/: copilot-compose.sh  git_hook_runner.py  init.sh  main_sync_guard_lib.sh  notify.sh  post_tool_use_ruff.sh  post_tool_use_ruff_gate.sh  pre_push_main_sync.sh  pre_tool_use_main_sync.sh  pre_tool_use_ruff_gate.sh  protect_config.py  protect_config.sh  session_start_main_sync.sh  setup.sh  setup_common.sh  update_project_name.py
scripts/systemd/: copilot-workspace.service.example
src/python_template_for_ai_assistant/: __init__.py
template/src/template_package/: schemas.py
tests/: test_check_task_contract.py  test_git_hook_runner.py  test_post_tool_use_ruff_gate.py  test_post_tool_use_ruff_hook.py  test_pre_push_main_sync.py  test_pre_tool_use_main_sync.py  test_pre_tool_use_ruff_gate.py  test_protect_config_hook.py  test_session_start_main_sync.py  test_setup_scripts.py
