[project]
name = "python-template-for-ai-assistant"
dynamic = ["version"]
description = "A modern Python project template optimized for Claude Code with strict guardrails"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.ruff]
include = ["src/**/*.py"]

[tool.pyright]
include = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "pyright>=1.1.0",
    "pre-commit>=3.7.0",
    "taskipy>=1.14.1",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
    "myst-parser>=2.0.0",
]


# =====================
# taskipy タスク定義
# =====================
[tool.taskipy.tasks]
check = """
  uv run ruff format &&
  uv run ruff check --fix &&
  uv run pyright &&
  uv run pytest tests
"""
